Fixed Todo overflow.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -192,7 +192,7 @@
   //padding: 15px;
 
   max-height: 350px;
-  overflow: scroll;
+  overflow: auto;
 
    ul.todo {
       width: 100%;
